<resources>
    <string name="login">登录</string>
    <string name="back">返回</string>
    <string name="login_title">你好，\n欢迎登录 WanAndroid</string>
    <string name="login_description">使用已有的 WanAndroid 账号登录</string>
    <string name="username">手机号</string>
    <string name="password">密码</string>
    <string name="show_password">显示密码</string>
    <string name="hide_password">隐藏密码</string>
    <string name="logging_in">正在登录…</string>
    <string name="login_rejected">登录未成功，请检查手机号和密码后重试</string>
    <string name="username_placeholder">请输入手机号</string>
    <string name="password_placeholder">请输入密码</string>
    <string name="consent_prefix">登录即代表您已阅读并同意</string>
    <string name="consent_and">和</string>
    <string name="terms">《用户协议》</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="register">注册</string>
    <string name="forgot_password">忘记密码</string>
    <string name="notice_title">提示</string>
    <string name="notice_confirm">知道了</string>
    <string name="register_unavailable">注册功能暂未开放，请使用已有的 WanAndroid 账号登录。</string>
    <string name="reset_password_unavailable">找回密码功能暂未开放。</string>
    <string name="terms_unavailable">用户协议内容暂未提供。</string>
    <string name="privacy_unavailable">隐私政策内容暂未提供。</string>
    <string name="phone_invalid">手机号输入有误，请重新输入</string>
</resources>
